--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "nuxt": "^2.0.0",
-    "nuxt-buefy": "^0.3.2"
+    "nuxt-buefy": "^0.3.2",
+    "nuxt-property-decorator": "^2.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
@@ -41,13 +42,14 @@
     "babel-preset-vue": "^2.0.2",
     "cypress": "^4.5.0",
     "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.2",
     "fork-ts-checker-webpack-plugin": "^4.1.3",
     "node-sass": "^4.14.0",
     "nodemon": "^1.18.9",
-    "nuxt-property-decorator": "^2.7.2",
+    
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "storybook-readme": "^5.0.8",
