--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "fork-ts-checker-webpack-plugin": "^4.1.3",
     "node-sass": "^4.14.0",
     "nodemon": "^1.18.9",
-    
+    "postcss-import": "^12.0.1",
+    "postcss-nested": "^4.2.1",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "storybook-readme": "^5.0.8",
+    "tailwindcss": "^1.4.6",
     "vuex-module-decorators": "^0.17.0"
   }
 }
