--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "author": "Devist",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server --open",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
+    "mockup": "cd server/mock && ts-node-dev --respawn mock-server.ts",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "e2e": "cypress run",
@@ -48,6 +49,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.2",
+    "faker": "^4.1.0",
     "fork-ts-checker-webpack-plugin": "^4.1.3",
     "node-sass": "^4.14.1",
     "nodemon": "^1.18.9",
@@ -57,6 +59,7 @@
     "sass-loader": "^8.0.2",
     "storybook-readme": "^5.0.8",
     "tailwindcss": "^1.4.6",
+    "ts-node-dev": "^1.0.0-pre.44",
     "vuex-module-decorators": "^0.17.0"
   }
 }
