--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.1.0",
     "babel-preset-vue": "^2.0.2",
+    "cors": "^2.8.5",
     "cypress": "^4.5.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.1.0",
