--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     },
     "types": [
       "@types/node",
-      "@nuxt/types"
+      "@nuxt/types",
+      "buefy/types"
     ]
   },
   "exclude": [
